--- a/Estilo.css
+++ b/Estilo.css
@@ -46,7 +46,7 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
-    line-height: 50px;
+    line-height: 0.91em;
 }
 .seção1{
     padding-bottom: 10%;
