--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section.imagem{
     background-size: cover;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.388);
     background-attachment: fixed;
-    background-position: right center;
+    background-position: center center;
 }
 
 section.imagem > p{
