--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ section.imagem{
     background-size: cover;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.388);
     background-attachment: fixed;
-    background-position: center center;
 }
 
 section.imagem > p{
@@ -84,10 +83,12 @@ section.imagem > p{
 }
 section#img01{
     background-image: url(imagens/background001.jpg);
+    background-position: left center;
 }
 
 section#img02{
     background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer{
