--- a/style.css
+++ b/style.css
@@ -82,13 +82,13 @@ section.imagem > p{
     padding: 5px;
 }
 section#img01{
-    background-image: url(imagens/background001.jpg);
+    background-image: url(imagens/img03.jpg);
     background-position: center center;
 }
 
 section#img02{
-    background-image: url(imagens/background002.jpg);
-    background-position: right center;
+    background-image: url(imagens/img04.jpg);
+    background-position: center center;
 }
 
 footer{
