--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ section.normal{
 section.imagem{
     background-color: rgb(54, 54, 54);
     color: white;
-    background-size: cover;
+    background-size: contain;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.388);
     background-attachment: fixed;
 }
