--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ section.imagem{
     background-size: contain;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.388);
     background-attachment: fixed;
+    background-size: cover;
 }
 
 section.imagem > p{
@@ -82,12 +83,12 @@ section.imagem > p{
     padding: 5px;
 }
 section#img01{
-    background-image: url(imagens/img03.jpg);
+    background-image: url(imagens/background001.jpg);
     background-position: center center;
 }
 
 section#img02{
-    background-image: url(imagens/img04.jpg);
+    background-image: url(imagens/background002.jpg);
     background-position: center center;
 }
 
