mudança de cor da fonte do cabeçalho

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body{
 
 header{
     background-color: black;
-    color: white;
+    color: blue;
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif
 }
